--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -1,4 +1,103 @@
 .landing {
 	height: 100vh;
-	background-color: lightgreen;
+	width: 100vw;
+	position: relative;
+	overflow: hidden;
+	background: linear-gradient(
+			rgba(255, 255, 255, 0.3),
+			rgba(255, 255, 255, 0.1)
+		),
+		url(https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3000&q=3000)
+			center;
+	min-width: 100%;
+	min-width: 100%;
+	background-size: cover;
+	background-position: center;
+
+	.wrapper {
+		height: 100%;
+		width: 100%;
+		overflow: hidden;
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		position: relative;
+
+		.welcome {
+			height: 300px;
+			width: 650px;
+			padding: 25px 25px;
+			border-radius: 15px;
+			background: rgb(211, 211, 211);
+			background: radial-gradient(
+				circle,
+				rgba(211, 211, 211, 1) 0%,
+				rgba(199, 207, 208, 1) 40%,
+				rgba(212, 201, 201, 0.8239670868347339) 60%,
+				rgba(219, 219, 219, 0.6194852941176471) 93%
+			);
+			backdrop-filter: blur(10px);
+			-webkit-backdrop-filter: blur(10px);
+			position: absolute;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: space-between;
+			bottom: 75px;
+			position: absolute;
+
+			.top {
+				font-family: Hind;
+				font-size: 16px;
+				font-weight: 400;
+			}
+
+			.center {
+				font-family: "Saira", sans-serif;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				font-weight: 700;
+				h2 {
+					font-size: 52px;
+				}
+
+				h3 {
+					font-size: 64px;
+				}
+			}
+
+			.bottom {
+				font-family: inherit;
+				.btn-container {
+					height: 50px;
+					width: 650px;
+					display: flex;
+					flex-direction: row;
+					align-items: center;
+					justify-content: center;
+					overflow: hidden;
+
+					.btn {
+						margin: 20px;
+						padding: 7px;
+						font-size: 24px;
+						color: rgb(255, 255, 255);
+						background-color: rgba(179, 190, 190);
+						outline: none;
+						border-style: none;
+						border-radius: 15px;
+						cursor: pointer;
+						transition: all 0.5s ease;
+
+						&:hover {
+							background-color: #23b2c6;
+						}
+					}
+				}
+			}
+		}
+	}
 }
