--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -5,20 +5,21 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	position: relative;
 
 	.about-wrapper {
-		height: 90%;
-		width: 90%;
-		margin: 10px;
+		height: 95%;
+		width: 92%;
 		display: flex;
+		position: absolute;
+		bottom: 0;
 
 		.about-left {
 			flex: 1.2;
-			background-color: $buttonColor;
+			background-color: $backgroundColor;
 			h1 {
 				margin: 25px 0 0 50px;
-
-				font-family: Saira;
+				font-family: "Saira", sans-serif;
 				font-style: normal;
 				font-weight: bold;
 				font-size: 40px;
@@ -48,8 +49,9 @@
 					width: 437px;
 					height: 60px;
 					border-radius: 15px;
-					background-color: $backgroundColor;
+					background-color: $buttonColor;
 					border: none;
+					font-family: Hind;
 					font-size: 20px;
 					font-weight: 600;
 					transition: all 0.5s ease;
