--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -86,6 +86,7 @@
 						margin: 20px;
 						padding: 7px;
 						font-size: 24px;
+						font-family: Hind;
 						color: rgb(255, 255, 255);
 						background-color: $buttonColor;
 						outline: none;
