setup new bars and background img

--- a/src/components/competition/competition.scss
+++ b/src/components/competition/competition.scss
@@ -3,7 +3,10 @@
 .competition {
 	height: 100vh;
 	background-color: lightgray;
-
+	img {
+		height: 100vh;
+		width: 100%;
+	}
 	.competition-wrapper {
 		width: 100%;
 		height: 100vh;
