--- a/src/components/competition/competition.scss
+++ b/src/components/competition/competition.scss
@@ -3,10 +3,12 @@
 .competition {
 	height: 100vh;
 	background-color: lightgray;
-	img {
-		height: 100vh;
-		width: 100%;
-	}
+	background: linear-gradient(
+			rgba(171, 230, 230, 0.9),
+			rgba(64, 71, 71, 1)
+		),
+		url(https://images.pexels.com/photos/414860/pexels-photo-414860.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)
+			center;
 	.competition-wrapper {
 		width: 100%;
 		height: 100vh;
@@ -16,8 +18,13 @@
 		position: relative;
 
 		.archway {
+			position: relative;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
 			background-color: lightcyan;
-			height: 750px;
+			height: 95%;
 			background-color: $buttonColor;
 			width: 65%;
 			position: absolute;
@@ -27,12 +34,26 @@
 			border-radius: 50% 50% 10% 10% / 66% 62% 0% 0%;
 
 			.a-top {
+				position: absolute;
+				top: 50px;
+				img {
+					width: 80%;
+					height: 80%;
+					display: flex;
+					margin: auto auto;
+					z-index: 1;
+				}
+			}
+			.a-bottom {
+				background-color: black;
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				flex-direction: column;
-			}
-			.a-bottom {
+				position: absolute;
+				width: 75%;
+				height: 50%;
+				bottom: 5%;
+				z-index: 2;
 			}
 		}
 	}
