--- a/src/components/competition/competitionInfo.scss
+++ b/src/components/competition/competitionInfo.scss
@@ -2,7 +2,7 @@
 
 .competition-i {
 	height: 100vh;
-	background-color: white;
+	background-color: #f5f5f5;
 	.competition-wrapper {
 		width: 100%;
 		height: 100vh;
