--- a/src/components/JoinInfo/JoinInfo.scss
+++ b/src/components/JoinInfo/JoinInfo.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .joinInfo {
 	height: 100vh;
 	width: 100%;
@@ -8,28 +10,75 @@
 
 	.container {
 		position: relative;
-		height: 500px;
-		width: 1200px;
 		margin-bottom: 300px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		flex-direction: row;
-		overflow: hidden;
+
+		.infoContainer {
+			position: absolute;
+			margin-top: 550px;
+			width: 1400px;
+			height: 200px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			z-index: 1;
+
+			.infoBox {
+				position: relative;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				height: 160px;
+				width: 190px;
+				margin: 75px;
+				background-color: $brandColor;
+				color: white;
+				cursor: pointer;
+				transition: all 0.9s ease;
+
+				h1 {
+					position: absolute;
+					font-family: Hind;
+					font-weight: 500;
+					font-size: 17px;
+					display: flex;
+					align-items: center;
+					text-align: center;
+					padding: 10px;
+				}
+
+				&:hover {
+					background-color: $backgroundColor;
+					color: black;
+					transform: scale(1.2);
+				}
+			}
+		}
 
 		.cards {
 			position: absolute;
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
+			height: 670px;
+			width: 1298px;
+			overflow: hidden;
 		}
 		.card {
-			width: 264px;
 			height: 574px;
-			background-color: purple;
-			margin: 10px;
+			width: 240px;
+			margin: 20px;
 			border-radius: 200px;
 			margin-top: 200px;
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				border-radius: 200px;
+			}
 		}
 	}
 }
