--- a/src/components/competition/competitionInfo.scss
+++ b/src/components/competition/competitionInfo.scss
@@ -28,7 +28,7 @@
 			border-top: none;
 
 			.c-top {
-				background-color: black;
+				background-color: $black;
 				color: white;
 				display: flex;
 				flex-direction: column;
