faw layout and button hover

--- a/src/components/news/news.scss
+++ b/src/components/news/news.scss
@@ -11,8 +11,7 @@
 		),
 		url(https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)
 			center;
-	min-width: 100%;
-	min-width: 100%;
+	width: 100%;
 	background-size: cover;
 	background-position: center;
 
