--- a/src/pages/clubs/clubs.scss
+++ b/src/pages/clubs/clubs.scss
@@ -9,7 +9,7 @@
 			rgba(255, 255, 255, 0.3),
 			rgba(255, 255, 255, 0.1)
 		),
-		url(https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3000&q=3000)
+		url(https://images.pexels.com/photos/5676744/pexels-photo-5676744.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)
 			center;
 	min-width: 100%;
 	min-width: 100%;
@@ -45,15 +45,9 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: space-between;
+			justify-content: center;
 			bottom: 75px;
 			position: absolute;
-
-			.top {
-				font-family: Hind;
-				font-size: 16px;
-				font-weight: 400;
-			}
 
 			.center {
 				font-family: "Saira", sans-serif;
@@ -62,9 +56,6 @@
 				align-items: center;
 				justify-content: center;
 				font-weight: 700;
-				h2 {
-					font-size: 52px;
-				}
 
 				h3 {
 					font-size: 64px;
@@ -72,33 +63,11 @@
 			}
 
 			.bottom {
-				font-family: inherit;
-				.btn-container {
-					height: 50px;
-					width: 650px;
-					display: flex;
-					flex-direction: row;
-					align-items: center;
-					justify-content: center;
-					overflow: hidden;
-
-					.btn {
-						margin: 20px;
-						padding: 7px;
-						font-size: 24px;
-						font-family: Hind;
-						color: rgb(255, 255, 255);
-						background-color: $buttonColor;
-						outline: none;
-						border-style: none;
-						border-radius: 15px;
-						cursor: pointer;
-						transition: all 0.5s ease;
-
-						&:hover {
-							background-color: $buttonHover;
-						}
-					}
+				h2 {
+					margin-bottom: 50px;
+					font-family: "Hind";
+					font-weight: 600;
+					font-size: 24px;
 				}
 			}
 		}
