--- a/src/pages/home/components/news/news.scss
+++ b/src/pages/home/components/news/news.scss
@@ -1,6 +1,6 @@
-@import "../../global.scss";
+@import "../../../../global.scss";
 
-.landing {
+.news {
 	height: 100vh;
 	width: 100vw;
 	position: relative;
@@ -9,10 +9,9 @@
 			rgba(255, 255, 255, 0.3),
 			rgba(255, 255, 255, 0.1)
 		),
-		url(https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3000&q=3000)
+		url(https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)
 			center;
-	min-width: 100%;
-	min-width: 100%;
+	width: 100%;
 	background-size: cover;
 	background-position: center;
 
@@ -50,24 +49,30 @@
 			position: absolute;
 
 			.top {
-				font-family: Hind;
-				font-size: 16px;
-				font-weight: 400;
+				h1 {
+					font-family: "Saira";
+					font-size: 50px;
+					font-style: normal;
+					font-weight: bold;
+					font-size: 50px;
+					font-weight: 400;
+				}
 			}
 
 			.center {
-				font-family: "Saira", sans-serif;
+				font-family: "Hind", sans-serif;
 				display: flex;
 				flex-direction: column;
-				align-items: center;
-				justify-content: center;
-				font-weight: 700;
+				font-weight: normal;
+
 				h2 {
-					font-size: 52px;
+					font-size: 20px;
+					margin: 30px;
 				}
 
 				h3 {
-					font-size: 64px;
+					font-size: 20px;
+					margin: 30px;
 				}
 			}
 
