--- a/src/pages/home/components/partner/partnerBar.scss
+++ b/src/pages/home/components/partner/partnerBar.scss
@@ -1,6 +1,6 @@
-@import "../../global.scss";
+@import "../../../../global.scss";
 
-.WhyJoinBar {
+.partnerBar {
 	width: 100%;
 	height: 205px;
 	background-color: $black;
@@ -9,7 +9,7 @@
 	justify-content: center;
 }
 
-.WhyJoinText {
+.partnerText {
 	color: white;
 	font-family: "Saira", sans-serif;
 	font-size: 40px;
