--- a/src/pages/clubs/components/landing/landing.scss
+++ b/src/pages/clubs/components/landing/landing.scss
@@ -1,6 +1,6 @@
 @import "../../../../global.scss";
 
-.clubs {
+.landing {
 	height: 100vh;
 	width: 100vw;
 	position: relative;
@@ -45,7 +45,7 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: center;
+			justify-content: space-between;
 			bottom: 75px;
 			position: absolute;
 
@@ -56,18 +56,15 @@
 				align-items: center;
 				justify-content: center;
 				font-weight: 700;
+				margin: auto;
+				h2 {
+					font-size: 52px;
+				}
 
 				h3 {
-					font-size: 64px;
-				}
-			}
+					font-family: "Hind", sans-serif;
 
-			.bottom {
-				h2 {
-					margin-bottom: 50px;
-					font-family: "Hind";
-					font-weight: 600;
-					font-size: 30px;
+					font-size: 64px;
 				}
 			}
 		}
