--- a/src/pages/partnersPage/components/partnersLanding/partnersLanding.scss
+++ b/src/pages/partnersPage/components/partnersLanding/partnersLanding.scss
@@ -45,14 +45,20 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: space-between;
+			justify-content: space-around;
 			bottom: 75px;
 			position: absolute;
 
 			.top {
 				font-family: Hind;
-				font-size: 16px;
+				font-size: 24px;
 				font-weight: 400;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				h1 {
+					padding-top: 30px;
+				}
 			}
 
 			.center {
@@ -62,43 +68,11 @@
 				align-items: center;
 				justify-content: center;
 				font-weight: 700;
+				width: 500px;
 				h2 {
-					font-size: 52px;
-				}
-
-				h3 {
-					font-size: 64px;
-				}
-			}
-
-			.bottom {
-				font-family: inherit;
-				.btn-container {
-					height: 50px;
-					width: 650px;
-					display: flex;
-					flex-direction: row;
-					align-items: center;
-					justify-content: center;
-					overflow: hidden;
-
-					.btn {
-						margin: 20px;
-						padding: 7px;
-						font-size: 24px;
-						font-family: Hind;
-						color: rgb(255, 255, 255);
-						background-color: $buttonColor;
-						outline: none;
-						border-style: none;
-						border-radius: 15px;
-						cursor: pointer;
-						transition: all 0.5s ease;
-
-						&:hover {
-							background-color: $buttonHover;
-						}
-					}
+					font-size: 20px;
+					text-align: center;
+					padding-bottom: 100px;
 				}
 			}
 		}
