set up partners layout

--- a/src/pages/partnersPage/components/main/infoBar.scss
+++ b/src/pages/partnersPage/components/main/infoBar.scss
@@ -1,6 +1,6 @@
 @import "../../../../global.scss";
 
-.WhyJoinBar {
+.infoBar {
 	width: 100%;
 	height: 205px;
 	background-color: $black;
@@ -9,7 +9,7 @@
 	justify-content: center;
 }
 
-.WhyJoinText {
+.infoText {
 	color: white;
 	font-family: "Saira", sans-serif;
 	font-size: 40px;
