--- a/src/pages/partnersPage/components/main/main.scss
+++ b/src/pages/partnersPage/components/main/main.scss
@@ -6,6 +6,7 @@
 	align-items: center;
 	justify-content: center;
 	position: relative;
+	background-color: $backgroundColor;
 
 	.main-wrapper {
 		height: 95%;
@@ -14,13 +15,47 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-around;
-		background-color: lightblue;
 
 		.neuro {
 			background-color: white;
-			width: 785px;
+			width: 685px;
 			height: 404px;
 			border-radius: 38px;
+
+			.imgContainer {
+				width: 100%;
+				height: 100%;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+
+				img {
+					width: 90%;
+					height: 90%;
+					object-fit: contain;
+				}
+			}
+		}
+
+		.branch {
+			background-color: white;
+			width: 785px;
+			height: 500px;
+			border-radius: 38px;
+
+			.imgContainer {
+				width: 100%;
+				height: 100%;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+
+				img {
+					width: 90%;
+					height: 90%;
+					object-fit: contain;
+				}
+			}
 		}
 
 		.branch {
