--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -10,16 +10,17 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
 	transition: all 0.5s ease;
 	z-index: 999;
 	background-color: transparent;
+	font-family: "Hind";
 
 	.sidebar-top {
 		padding: 50px 20px 25px;
 		display: flex;
 		align-items: center;
-		justify-content: center;
+		justify-content: space-around;
 		border-bottom: 1px solid white;
 		font-weight: 900;
 
@@ -44,6 +45,7 @@
 		border-bottom: 1px solid white;
 
 		.list {
+			width: 100%;
 			padding: 0;
 			list-style: none;
 
@@ -55,9 +57,9 @@
 				align-items: center;
 				justify-content: center;
 				flex-direction: column;
+				margin-bottom: 100px;
 
 				.list-item-text {
-					width: 100%;
 					font-size: 22px;
 					padding: 15px 0;
 					margin-bottom: 5px;
@@ -66,7 +68,8 @@
 					align-items: center;
 					cursor: pointer;
 					border-radius: 15px;
-
+					text-decoration: none;
+					color: inherit;
 					&:hover {
 						background-color: white;
 						color: black;
