--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -71,9 +71,9 @@
 					text-decoration: none;
 					color: inherit;
 					&:hover {
-						background-color: white;
-						color: black;
-						transition: all 0.5s ease-in-out;
+						font-weight: bold;
+						color: white;
+						transition: all 0.1s ease-in-out;
 					}
 				}
 			}
