added data and mapping for partners page

--- a/src/pages/clubs/components/all/participating.scss
+++ b/src/pages/clubs/components/all/participating.scss
@@ -1,7 +1,7 @@
 @import "../../../../global.scss";
 
-.newClub {
-	height: 200vh;
+.participatingInfo {
+	height: 500vh;
 	width: 100%;
 	position: relative;
 	display: flex;
