--- a/src/pages/clubs/components/new/new.scss
+++ b/src/pages/clubs/components/new/new.scss
@@ -1,7 +1,7 @@
 @import "../../../../global.scss";
 
-.participatingInfo {
-	height: 100vh;
+.newClub {
+	height: 200vh;
 	width: 100%;
 	position: relative;
 	display: flex;
@@ -16,70 +16,71 @@
 		align-items: center;
 		justify-content: center;
 		flex-direction: row;
+		width: 100%;
 
 		.cards {
 			position: absolute;
 			display: flex;
-			flex-direction: row;
 			justify-content: space-between;
-			height: 670px;
-			width: 1298px;
-			overflow: hidden;
-		}
-		.card {
-			position: relative;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			height: 574px;
-			width: 240px;
-			margin: 20px;
-			border-radius: 200px;
-			margin-top: 200px;
-			z-index: 1;
-			background-color: white;
+			flex-wrap: wrap;
 
-			.imgContainer {
+			.card {
+				position: relative;
 				display: flex;
-				width: 700px;
-				height: 300px;
-				padding-bottom: 250px;
-				img {
-					height: 75%;
-					width: 75%;
-					object-fit: cover;
-					margin: auto;
-				}
-			}
-			.infoBox {
-				bottom: 100px;
-				width: 100%;
-				height: 175px;
-				background: $buttonColor;
-				position: absolute;
-				color: white;
-				z-index: 2;
-				transition: all 0.5s ease;
+				align-items: center;
+				justify-content: center;
+				height: 450px;
+				width: 240px;
+				margin: 20px;
+				border-radius: 50% 50% 10% 10% / 25% 25% 0% 0%;
+				margin-top: 200px;
+				z-index: 1;
+				background-color: white;
 
-				.textBox {
+				.imgContainer {
 					display: flex;
-					align-items: center;
-					justify-content: center;
-					flex-direction: column;
-					margin-top: 50px;
-					font-family: "Hind";
-					font-weight: 600;
-					color: white;
-					h1 {
-						font-size: 24px;
-					}
-					h2 {
-						font-size: 16px;
+					width: 800px;
+					height: 375px;
+					padding-bottom: 175px;
+					img {
+						height: 75%;
+						width: 75%;
+						object-fit: contain;
+						margin: auto;
 					}
 				}
-				cursor: pointer;
-				&:hover {
-					background-color: $brandColor;
+
+				.infoBox {
+					bottom: 0px;
+					width: 100%;
+					height: 175px;
+					background: $buttonColor;
+					position: absolute;
+					color: white;
+					z-index: 2;
+					transition: all 0.5s ease;
+
+					.textBox {
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						flex-direction: column;
+						margin-top: 50px;
+						font-family: "Hind";
+						text-align: center;
+						font-weight: 600;
+						color: white;
+						h1 {
+							font-size: 24px;
+						}
+						h2 {
+							font-size: 16px;
+						}
+					}
+					cursor: pointer;
+					&:hover {
+						background-color: $brandColor;
+					}
 				}
 			}
 		}
