fixed somlay out issues on get started page

--- a/src/pages/get started page/components/gs1/gs1.scss
+++ b/src/pages/get started page/components/gs1/gs1.scss
@@ -1,7 +1,7 @@
 @import "../../../../global.scss";
 
 .gs1 {
-	height: 100vh;
+	height: 125vh;
 	width: 100%;
 	background-color: #f6f6f6;
 	display: flex;
@@ -10,7 +10,7 @@
 	position: relative;
 	flex-direction: column;
 	.backgroundColumn {
-		height: 100vh;
+		height: 100%;
 		width: 50%;
 		background-color: rgba(221, 239, 241, 0.95);
 		z-index: 1;
@@ -21,10 +21,11 @@
 		flex-direction: row;
 		align-items: center;
 		justify-content: center;
-		flex: 0.5;
+		flex: 0.4;
 		z-index: 2;
 		background-color: #b1bebf;
-		margin: 75px;
+		margin-bottom: 150px;
+		margin-top: 75px;
 		width: 1115px;
 		height: 388px;
 
@@ -43,11 +44,11 @@
 				text-align: center;
 
 				h1 {
-					font-size: 24px;
+					font-size: 26px;
 				}
 				h2 {
 					font-weight: 400;
-					font-size: 22px;
+					font-size: 24px;
 					margin: 25px;
 					width: 250px;
 				}
