--- a/src/pages/get started page/components/fields/domains/fields.scss
+++ b/src/pages/get started page/components/fields/domains/fields.scss
@@ -1,7 +1,7 @@
 @import "../../../../../global.scss";
 
 .fields {
-	height: 150vh;
+	height: 175vh;
 	width: 100%;
 	background-color: #f6f6f6;
 	display: flex;
@@ -28,7 +28,7 @@
 	}
 
 	.container {
-		height: 130vh;
+		height: 90%;
 		width: 50%;
 		background-color: rgba(221, 239, 241, 0.95);
 		z-index: 1;
@@ -36,7 +36,7 @@
 
 		.textBox {
 			padding-top: 295px;
-			margin-left: 300px;
+			margin-left: 350px;
 			width: 460px;
 			height: 706px;
 			font-family: Hind;
