--- a/src/pages/home/components/partner/partners.scss
+++ b/src/pages/home/components/partner/partners.scss
@@ -3,7 +3,7 @@
 .partners {
 	background-color: white;
 	.container {
-		height: 100vh;
+		height: 175vh;
 		width: 100%;
 		position: relative;
 		display: flex;
@@ -14,7 +14,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			margin: 25px;
+			margin: 100px 25px 200px 25px;
 
 			.topCard {
 				position: relative;
@@ -24,9 +24,9 @@
 				border-radius: 43px;
 				background: #ffffff;
 				box-shadow: 35px 35px 70px #d9d9d9,
-					-35px -35px 70px #ffffff;
-				width: 500px;
-				height: 250px;
+					-15px -15px 15px #ffffff;
+				width: 700px;
+				height: 450px;
 				border: 1px solid white;
 				transition: all 0.5s ease-in-out;
 
@@ -47,17 +47,18 @@
 					);
 					box-shadow: 35px 35px 70px #d9d9d9,
 						-35px -35px 70px #ffffff;
+					cursor: pointer;
 				}
 			}
 		}
 		.center {
-			flex: 0.5;
+			flex: 0.4;
 			display: flex;
 			align-items: center;
-			justify-content: center;
+			justify-content: space-around;
 			flex-wrap: wrap;
-			margin-left: 325px;
-			margin-right: 325px;
+			margin-left: 350px;
+			margin-right: 350px;
 			.centerCard {
 				display: flex;
 				justify-content: center;
@@ -69,7 +70,6 @@
 					-25px -25px 50px #ffffff;
 				width: 250px;
 				height: 125px;
-				margin: 10px;
 				transition: all 0.5s ease-in-out;
 
 				img {
@@ -88,6 +88,7 @@
 					);
 					box-shadow: 25px 25px 50px #d9d9d9,
 						-25px -25px 50px #ffffff;
+					cursor: pointer;
 				}
 			}
 		}
