--- a/src/pages/partners page/components/influencer/influencers.scss
+++ b/src/pages/partners page/components/influencer/influencers.scss
@@ -3,7 +3,7 @@
 .influencers {
 	background-color: $backgroundColor;
 	.container {
-		height: 100vh;
+		height: 75vh;
 		width: 100%;
 		position: relative;
 		display: flex;
@@ -11,15 +11,15 @@
 		align-items: center;
 
 		.center {
-			height: 600px;
+			height: 500px;
 			width: 800px;
 			display: flex;
 			align-items: center;
 			justify-content: space-around;
 			flex-wrap: wrap;
 			margin: 20px;
-			margin-left: 400px;
-			margin-right: 400px;
+			margin-left: 300px;
+			margin-right: 300px;
 			.centerCard {
 				display: flex;
 				justify-content: center;
@@ -33,10 +33,11 @@
 				);
 				box-shadow: 5px 5px 10px #d9d9d9,
 					-5px -5px 10px #ffffff;
-				width: 250px;
-				height: 125px;
+				width: 300px;
+				height: 150px;
 				margin: 10px;
 				transition: all 0.5s ease-in-out;
+				cursor: pointer;
 
 				img {
 					width: 80%;
