--- a/src/pages/partners page/components/main partners/main.scss
+++ b/src/pages/partners page/components/main partners/main.scss
@@ -28,6 +28,7 @@
 			width: 800px;
 			height: 500px;
 			border-radius: 38px;
+			transition: all 0.5s ease;
 
 			.imgContainer {
 				width: 90%;
@@ -41,6 +42,18 @@
 					height: 100%;
 					object-fit: contain;
 				}
+			}
+			&:hover {
+				border-radius: 43px;
+				border: 1px solid $brandColor;
+				background: linear-gradient(
+					145deg,
+					#e6e6e6,
+					#ffffff
+				);
+				box-shadow: 35px 35px 70px #d9d9d9,
+					-35px -35px 70px #ffffff;
+				cursor: pointer;
 			}
 		}
 	}
