--- a/src/pages/home/components/dashboard/dashboard.scss
+++ b/src/pages/home/components/dashboard/dashboard.scss
@@ -13,7 +13,6 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		position: relative;
 
 		.cards {
 			margin: 20px;
@@ -24,13 +23,52 @@
 			align-items: center;
 			justify-content: center;
 			flex-wrap: wrap;
-			position: absolute;
 
 			.card {
 				background-color: $buttonColor;
 				width: 180px;
 				height: 180px;
 				margin: 10px;
+				position: relative;
+				cursor: pointer;
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+				.textBox {
+					position: absolute;
+					bottom: -10px;
+					left: 0;
+					right: 0;
+					margin: 0 auto;
+					background-color: #ddeff1;
+					width: 140px;
+					height: 55.07px;
+					z-index: 1;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					transition: all 0.5s ease;
+
+					.text {
+						display: flex;
+						justify-content: center;
+
+						font-family: Hind;
+						font-weight: 600;
+						font-size: 20px;
+					}
+				}
+				&:hover {
+					.textBox {
+						background-color: $brandColor;
+
+						.text {
+							color: white;
+						}
+					}
+				}
 			}
 		}
 	}
