--- a/src/pages/FAQ/faq.scss
+++ b/src/pages/FAQ/faq.scss
@@ -1,8 +1,7 @@
-@import "../../../../global.scss";
+@import "../../global.scss";
 
 .faq {
-	width: 100vw;
-	height: 100vh;
+	height: 150vh;
 	.container {
 		width: 100%;
 		height: 100%;
@@ -26,6 +25,9 @@
 			background-color: $backgroundColor;
 			position: relative;
 			border-bottom: 1px solid $black;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 			h2 {
 				display: flex;
 				justify-content: center;
@@ -35,16 +37,33 @@
 				height: 131px;
 				font-family: "Hind";
 			}
-			button {
+			.seeMore {
+				height: 19px;
+				width: 20px;
 				border: none;
 				font-family: "Hind";
 				background: none;
 				font-size: 24px;
-				padding-right: 5px;
 				z-index: 2;
-				cursor: pointer;
 				position: absolute;
 				right: 20px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				flex-direction: column;
+				cursor: pointer;
+				border-radius: 50%;
+				overflow: hidden;
+
+				span {
+					width: 100%;
+					height: 3px;
+					background-color: black;
+				}
+				.line1 {
+					transform: rotate(90deg);
+					width: 25px;
+				}
 			}
 		}
 		.answer {
