--- a/src/pages/FAQ/faq.scss
+++ b/src/pages/FAQ/faq.scss
@@ -1,11 +1,12 @@
 @import "../../global.scss";
 
 .faq {
-	height: 150vh;
+	height: auto;
 	.container {
 		width: 100%;
 		height: 100%;
 		margin-top: 200px;
+		margin-bottom: 200px;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -14,7 +15,6 @@
 
 		h1 {
 			font-family: "Saira";
-			font-size: 50px;
 			margin: 20px;
 		}
 		.questionBox {
@@ -28,14 +28,20 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			width: 80%;
+			height: 200px;
+			padding-top: 1vh;
+			padding-bottom: 1vh;
+			cursor: pointer;
+
 			h2 {
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				margin: 20px;
-				width: 938px;
-				height: 131px;
 				font-family: "Hind";
+				width: 80%;
+				height: 80%;
+				font-size: 2.1vw;
 			}
 			.seeMore {
 				height: 19px;
@@ -43,7 +49,6 @@
 				border: none;
 				font-family: "Hind";
 				background: none;
-				font-size: 24px;
 				z-index: 2;
 				position: absolute;
 				right: 20px;
@@ -51,25 +56,13 @@
 				align-items: center;
 				justify-content: center;
 				flex-direction: column;
-				cursor: pointer;
 				border-radius: 50%;
 				overflow: hidden;
-
-				span {
-					width: 100%;
-					height: 3px;
-					background-color: black;
-				}
-				.line1 {
-					transform: rotate(90deg);
-					width: 25px;
-				}
+				transition: all 0.5 ease;
 			}
 		}
 		.answer {
-			display: none;
-		}
-		.active {
+			transition: all 0.5 ease;
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -77,40 +70,14 @@
 			padding-top: 20px;
 			padding-bottom: 20px;
 			padding: 20px;
-			width: 938px;
-			height: 131px;
+			width: 77%;
+			height: 20vh;
 			font-family: "Hind";
-			font-size: 24px;
+			font-size: 1.8vw;
 			border: 1px solid $brandColor;
 			border-bottom: none;
 			border-top: none;
-		}
-		.btn-container {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			margin: 20px;
-			width: 250px;
-			height: 200px;
-
-			button {
-				border: none;
-				margin: 10px;
-				width: 429px;
-				height: 54px;
-				border-radius: 15px;
-				background-color: $buttonColor;
-				color: white;
-				font-family: "Hind";
-				font-weight: 600;
-				font-size: 25px;
-				cursor: pointer;
-				transition: all 0.5s ease;
-
-				&:hover {
-					background-color: $brandColor;
-				}
-			}
+			transition: all 0.5 ease;
 		}
 	}
 }
