--- a/src/pages/home/components/JoinInfo/JoinInfo.scss
+++ b/src/pages/home/components/JoinInfo/JoinInfo.scss
@@ -2,7 +2,7 @@
 
 .joinInfo {
 	height: 100vh;
-	width: 100%;
+	width: 100vw;
 	position: relative;
 	display: flex;
 	align-items: center;
@@ -33,7 +33,7 @@
 				align-items: center;
 				height: 160px;
 				width: 190px;
-				margin: 75px;
+				margin: 47px;
 				background-color: $brandColor;
 				color: white;
 				cursor: pointer;
@@ -62,7 +62,7 @@
 			position: absolute;
 			display: flex;
 			flex-direction: row;
-			justify-content: space-between;
+			justify-content: center;
 			height: 670px;
 			width: 1298px;
 			overflow: hidden;
