--- a/src/pages/home/components/partner/partners.scss
+++ b/src/pages/home/components/partner/partners.scss
@@ -57,8 +57,8 @@
 			align-items: center;
 			justify-content: space-around;
 			flex-wrap: wrap;
-			margin-left: 350px;
-			margin-right: 350px;
+			margin-left: 25vw;
+			margin-right: 25vw;
 			.centerCard {
 				display: flex;
 				justify-content: center;
@@ -68,8 +68,8 @@
 				background: #ffffff;
 				box-shadow: 25px 25px 50px #d9d9d9,
 					-25px -25px 50px #ffffff;
-				width: 250px;
-				height: 125px;
+				width: 20vw;
+				height: 20vh;
 				transition: all 0.5s ease-in-out;
 
 				img {
