fixed implications layout

--- a/src/pages/get started page/components/fields/domains/fields.scss
+++ b/src/pages/get started page/components/fields/domains/fields.scss
@@ -28,17 +28,17 @@
 	}
 
 	.container {
-		height: 93%;
+		height: 100%;
 		width: 65%;
 		background-color: rgba(221, 239, 241, 0.95);
 		z-index: 1;
 		position: absolute;
 
 		.textBox {
-			padding-top: 295px;
-			margin-left: 425px;
-			width: 460px;
-			height: 706px;
+			padding-top: 100px;
+			margin-left: 475px;
+			width: 40%;
+			height: 100%;
 			font-family: Hind;
 			font-style: normal;
 			font-size: 21px;
