--- a/src/pages/get started page/components/resources/resources.scss
+++ b/src/pages/get started page/components/resources/resources.scss
@@ -2,13 +2,14 @@
 
 .resources {
 	height: 125vh;
+	width: 100vw;
 	background-color: #f6f6f6;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	.banner {
-		width: 900px;
+		width: 100%;
 		height: 148px;
 		z-index: 3;
 		background: #31afbe;
@@ -25,6 +26,7 @@
 
 	.container {
 		position: relative;
+		width: 90%;
 		margin-bottom: 300px;
 		display: flex;
 		align-items: center;
@@ -34,7 +36,7 @@
 		.infoContainer {
 			position: absolute;
 			margin-top: 550px;
-			width: 1400px;
+			width: 100%;
 			height: 200px;
 			display: flex;
 			align-items: center;
@@ -46,9 +48,9 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				height: 160px;
-				width: 190px;
-				margin: 75px;
+				height: 60%;
+				width: 15%;
+				margin: 9.5%;
 				background-color: $brandColor;
 				color: white;
 				cursor: pointer;
@@ -58,11 +60,11 @@
 					position: absolute;
 					font-family: Hind;
 					font-weight: 500;
-					font-size: 17px;
+					font-size: 2vw;
 					display: flex;
 					align-items: center;
 					text-align: center;
-					padding: 10px;
+					padding: 10%;
 				}
 
 				&:hover {
@@ -76,14 +78,14 @@
 		.cards {
 			display: flex;
 			flex-direction: row;
-			justify-content: space-between;
+			justify-content: space-around;
 			height: 570px;
-			width: 1298px;
+			width: 100%;
 			overflow: hidden;
 		}
 		.card {
 			height: 574px;
-			width: 240px;
+			width: 20%;
 			margin: 20px;
 			border-radius: 200px;
 			margin-top: 200px;
