--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -17,7 +17,7 @@
 	font-family: "Hind";
 
 	.sidebar-top {
-		padding: 90px 20px 25px;
+		padding: 50% 20px 25px;
 		display: flex;
 		align-items: center;
 		justify-content: space-around;
