--- a/src/pages/get started page/components/resources/resources.scss
+++ b/src/pages/get started page/components/resources/resources.scss
@@ -9,8 +9,9 @@
 	align-items: center;
 	flex-direction: column;
 	.banner {
+		margin-top: 20%;
 		width: 100%;
-		height: 148px;
+		height: 20%;
 		z-index: 3;
 		background: #31afbe;
 		display: flex;
