--- a/src/pages/partners page/components/influencer/influencers.scss
+++ b/src/pages/partners page/components/influencer/influencers.scss
@@ -3,7 +3,7 @@
 .influencers {
 	background-color: $backgroundColor;
 	.container {
-		height: 75vh;
+		height: 100vh;
 		width: 100%;
 		position: relative;
 		display: flex;
@@ -11,50 +11,48 @@
 		align-items: center;
 
 		.center {
-			height: 500px;
-			width: 800px;
+			height: 50%;
+			width: 80%;
 			display: flex;
 			align-items: center;
 			justify-content: space-around;
 			flex-wrap: wrap;
-			margin: 20px;
-			margin-left: 300px;
-			margin-right: 300px;
-			.centerCard {
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				border-radius: 43px;
-				border: 1px solid white;
-				background: linear-gradient(
-					145deg,
-					#ffffff,
-					#e6e6e6
-				);
-				box-shadow: 5px 5px 10px #d9d9d9,
-					-5px -5px 10px #ffffff;
-				width: 300px;
-				height: 150px;
-				margin: 10px;
-				transition: all 0.5s ease-in-out;
-				cursor: pointer;
-
-				img {
-					width: 80%;
-					height: 80%;
-					object-fit: contain;
-				}
-
-				&:hover {
+			a {
+				.centerCard {
+					display: flex;
+					justify-content: center;
+					align-items: center;
 					border-radius: 43px;
-					border: 1px solid $brandColor;
+					border: 1px solid white;
 					background: linear-gradient(
 						145deg,
-						#e6e6e6,
-						#ffffff
+						#ffffff,
+						#e6e6e6
 					);
-					box-shadow: 25px 25px 50px #d9d9d9,
-						-25px -25px 50px #ffffff;
+					box-shadow: 5px 5px 10px #d9d9d9,
+						-5px -5px 10px #ffffff;
+					width: 300px;
+					height: 150px;
+					transition: all 0.5s ease-in-out;
+					cursor: pointer;
+
+					img {
+						width: 80%;
+						height: 80%;
+						object-fit: contain;
+					}
+
+					&:hover {
+						border-radius: 43px;
+						border: 1px solid $brandColor;
+						background: linear-gradient(
+							145deg,
+							#e6e6e6,
+							#ffffff
+						);
+						box-shadow: 25px 25px 50px #d9d9d9,
+							-25px -25px 50px #ffffff;
+					}
 				}
 			}
 		}
