--- a/src/pages/clubs/components/all/participating.scss
+++ b/src/pages/clubs/components/all/participating.scss
@@ -1,7 +1,7 @@
 @import "../../../../global.scss";
 
 .participatingInfo {
-	height: 500vh;
+	height: flex-grow;
 	width: 100%;
 	position: relative;
 	display: flex;
@@ -11,18 +11,18 @@
 
 	.container {
 		position: relative;
-		margin-bottom: 300px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		flex-direction: row;
 		width: 100%;
+		height: auto;
 
 		.cards {
-			position: absolute;
 			display: flex;
-			justify-content: space-between;
+			justify-content: space-around;
 			flex-wrap: wrap;
+			margin-top: 10%;
 
 			.card {
 				position: relative;
@@ -30,18 +30,17 @@
 				align-items: center;
 				justify-content: center;
 				height: 450px;
-				width: 240px;
-				margin: 20px;
+				width: 250px;
+				margin: 5%;
 				border-radius: 50% 50% 10% 10% / 25% 25% 0% 0%;
-				margin-top: 200px;
 				z-index: 1;
 				background-color: white;
 
 				.imgContainer {
 					display: flex;
-					width: 800px;
-					height: 375px;
-					padding-bottom: 175px;
+					width: 100%;
+					height: 50%;
+					padding-bottom: 75%;
 					img {
 						height: 75%;
 						width: 75%;
@@ -51,9 +50,9 @@
 				}
 
 				.infoBox {
-					bottom: 0px;
+					bottom: 0;
 					width: 100%;
-					height: 175px;
+					height: 40%;
 					background: $buttonColor;
 					position: absolute;
 					color: white;
@@ -65,16 +64,16 @@
 						align-items: center;
 						justify-content: center;
 						flex-direction: column;
-						margin-top: 50px;
+						margin-top: 25%;
 						font-family: "Hind";
 						text-align: center;
 						font-weight: 600;
 						color: white;
 						h1 {
-							font-size: 24px;
+							font-size: 2vw;
 						}
 						h2 {
-							font-size: 16px;
+							font-size: 1.5vw;
 						}
 					}
 					cursor: pointer;
