fixed padding on why join section

--- a/src/pages/get started page/components/activities/activities.scss
+++ b/src/pages/get started page/components/activities/activities.scss
@@ -35,22 +35,22 @@
 		position: absolute;
 
 		.textBox {
-			padding-top: 35%;
+			padding-top: 25%;
 			padding-left: 5%;
-			width: 460px;
+			padding-right: 5%;
+			width: 75%;
 			height: 900px;
 			font-family: Hind;
 			font-style: normal;
 			font-weight: normal;
 			font-size: 1.7vw;
 			line-height: 38px;
-
 			color: #000000;
 		}
 	}
 
 	.imgContainer {
-		width: 33%;
+		width: 30%;
 		height: 93%;
 		z-index: 4;
 		position: absolute;
