flexed the dashboard

--- a/src/pages/home/components/partner/partners.scss
+++ b/src/pages/home/components/partner/partners.scss
@@ -3,7 +3,7 @@
 .partners {
 	background-color: white;
 	.container {
-		height: flex-grow;
+		flex: 1;
 		width: 100%;
 		position: relative;
 		display: flex;
