--- a/src/pages/home/components/dashboard/dashboard.scss
+++ b/src/pages/home/components/dashboard/dashboard.scss
@@ -1,34 +1,33 @@
 @import "../../../../global.scss";
 
 .dashboard {
-	width: 100vw;
-	height: 100vh;
 	display: flex;
+	flex: 1;
 	align-items: center;
 	justify-content: center;
 	.container {
-		width: 1200px;
-		height: 600px;
+		width: 90vw;
 		background-color: #f5f5f5;
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		margin-bottom: 10%;
 
 		.cards {
-			margin: 20px;
-			width: 1000px;
-			height: 400px;
+			width: 100%;
+			height: 70vh;
+			margin: 1%;
 			display: flex;
 			flex-direction: row;
 			align-items: center;
-			justify-content: center;
+			justify-content: space-between;
 			flex-wrap: wrap;
 
 			.card {
 				background-color: $buttonColor;
-				width: 180px;
-				height: 180px;
-				margin: 10px;
+				width: 18%;
+				height: 35%;
+				margin: 1%;
 				position: relative;
 				cursor: pointer;
 				img {
@@ -43,8 +42,8 @@
 					right: 0;
 					margin: 0 auto;
 					background-color: #ddeff1;
-					width: 140px;
-					height: 55.07px;
+					width: 90%;
+					height: 30%;
 					z-index: 1;
 					display: flex;
 					justify-content: center;
@@ -54,10 +53,9 @@
 					.text {
 						display: flex;
 						justify-content: center;
-
 						font-family: Hind;
 						font-weight: 600;
-						font-size: 20px;
+						font-size: 1.5vw;
 					}
 				}
 				&:hover {
