--- a/src/pages/home/components/partner/partners.scss
+++ b/src/pages/home/components/partner/partners.scss
@@ -14,7 +14,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			margin: 100px 25px 200px 25px;
+			margin: 10% 5% 10% 5%;
 
 			.topCard {
 				position: relative;
@@ -25,8 +25,8 @@
 				background: #ffffff;
 				box-shadow: 35px 35px 70px #d9d9d9,
 					-15px -15px 15px #ffffff;
-				width: 700px;
-				height: 450px;
+				width: 70vw;
+				height: 60vh;
 				border: 1px solid white;
 				transition: all 0.5s ease-in-out;
 
@@ -57,7 +57,7 @@
 			align-items: center;
 			justify-content: space-between;
 			flex-wrap: wrap;
-			margin: 5% 25%;
+			margin: 10% 25%;
 			.centerCard {
 				display: flex;
 				justify-content: center;
