--- a/src/pages/get started page/components/fields/domains/fields.scss
+++ b/src/pages/get started page/components/fields/domains/fields.scss
@@ -1,7 +1,7 @@
 @import "../../../../../global.scss";
 
 .fields {
-	height: 200vh;
+	height: 205vh;
 	width: 100vw;
 	background-color: #f6f6f6;
 	display: flex;
@@ -11,7 +11,7 @@
 
 	.banner {
 		position: absolute;
-		width: 40%;
+		width: 60%;
 		height: 10%;
 		top: 50px;
 		left: 0;
@@ -36,15 +36,19 @@
 		position: absolute;
 
 		.textBox {
-			padding-top: 10%;
-			margin-left: 70%;
+			padding-top: 35%;
+			margin-left: 55%;
 			width: 40%;
 			height: 100%;
+			justify-content: space-around;
 			font-family: Hind;
 			font-style: normal;
 			font-size: 1.9vw;
-			line-height: 35px;
+			line-height: 4.8vh;
 			color: #000000;
+			ul {
+				line-height: 5vh;
+			}
 		}
 	}
 
@@ -53,8 +57,8 @@
 		height: 60%;
 		z-index: 4;
 		position: absolute;
-		left: 100px;
-		top: 300px;
+		left: 5%;
+		top: 20%;
 
 		img {
 			width: 100%;
