--- a/src/pages/get started page/components/gs2/gs2.scss
+++ b/src/pages/get started page/components/gs2/gs2.scss
@@ -6,7 +6,6 @@
 	background-color: #f6f6f6;
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	position: relative;
 	flex-direction: column;
 	.backgroundColumn {
@@ -27,6 +26,7 @@
 		margin-top: 100px;
 		margin-bottom: 75px;
 		width: 90%;
+		height: 25%;
 
 		.container {
 			width: 100%;
@@ -40,51 +40,56 @@
 			position: relative;
 
 			.textBox {
-				position: absolute;
 				color: white;
 				text-align: center;
 				display: flex;
+				align-items: center;
+				justify-content: center;
 				flex-direction: column;
 
 				h1 {
-					font-size: 2.4vw;
+					font-size: 2.3vw;
+					line-height: 1vh;
 				}
 				h2 {
+					margin-top: 10%;
 					font-weight: 400;
-					font-size: 1.9vw;
-					padding: 25px;
-					width: 250px;
+					font-size: 1.7vw;
+					padding: 5%;
+					line-height: 4vh;
 				}
 			}
 		}
 	}
 
 	.rContainer {
-		width: 75%;
+		width: 100%;
 		height: 70%;
-
-		margin: 30px;
 		display: flex;
 		align-content: inherit;
 		justify-content: center;
 		font-family: "Hind";
 		font-weight: 700;
 		position: relative;
+
 		.textBox {
-			position: absolute;
 			color: white;
 			text-align: center;
 			display: flex;
+			align-items: center;
+			justify-content: center;
 			flex-direction: column;
 
 			h1 {
-				font-size: 2.4vw;
+				font-size: 2.3vw;
+				line-height: 1vh;
 			}
 			h2 {
+				margin-top: 10%;
 				font-weight: 400;
-				font-size: 1.9vw;
-				margin: 25px;
-				width: 250px;
+				font-size: 1.7vw;
+				padding: 6%;
+				line-height: 4vh;
 			}
 		}
 	}
