--- a/src/pages/partners/components/influencer/influencers.scss
+++ b/src/pages/partners/components/influencer/influencers.scss
@@ -3,7 +3,6 @@
 .influencers {
 	background-color: $backgroundColor;
 	.container {
-		height: 100vh;
 		width: 100%;
 		position: relative;
 		display: flex;
@@ -17,6 +16,8 @@
 			align-items: center;
 			justify-content: space-around;
 			flex-wrap: wrap;
+			padding: 5% 0 5% 0;
+
 			a {
 				.centerCard {
 					display: flex;
@@ -35,6 +36,7 @@
 					height: 150px;
 					transition: all 0.5s ease-in-out;
 					cursor: pointer;
+					margin: 10%;
 
 					img {
 						width: 80%;
