--- a/src/pages/partners/components/previous supporters/previousSupporters.scss
+++ b/src/pages/partners/components/previous supporters/previousSupporters.scss
@@ -3,7 +3,6 @@
 .previousSupporters {
 	background-color: $backgroundColor;
 	.container {
-		height: 150vh;
 		width: 100%;
 		position: relative;
 		display: flex;
@@ -20,6 +19,7 @@
 			margin: 20px;
 			margin-left: 200px;
 			margin-right: 200px;
+			margin: 10%;
 			.centerCard {
 				display: flex;
 				justify-content: center;
@@ -35,7 +35,6 @@
 					-5px -5px 10px #ffffff;
 				width: 250px;
 				height: 125px;
-				margin: 10px;
 				transition: all 0.5s ease-in-out;
 
 				img {
